<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingTop="30dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/m"
            android:id="@+id/textView"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtkata" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/md"
            android:id="@+id/textView2"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtkataDeskripsi" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="1">
        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="wrap_content"
            android:id="@+id/btnprosesEnkripsi"
            android:text="@string/b"
            android:layout_height="wrap_content"
            android:layout_weight="9.75">

        </com.gc.materialdesign.views.ButtonRectangle>

            <com.gc.materialdesign.views.ButtonRectangle
                android:layout_width="196dp"
                android:id="@+id/btnprosesDeskripsi"
                android:text="@string/bd"
                android:layout_height="wrap_content">

            </com.gc.materialdesign.views.ButtonRectangle>

        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="17dp"
                    android:id="@+id/tvhasil"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/img"
                    android:src="@drawable/r"
                    android:visibility="invisible" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>