<?xml version="1.0" encoding="utf-8"?>
<com.gc.materialdesign.views.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cyber.root.sirot13.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="104.0dip">

            <TextView
                android:textSize="@dimen/subhead"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nm"
                android:layout_centerVertical="true" />

            <View
                android:background="@color/colorPrimaryDark"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/game"
            android:background="#ffffffff"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="64.0dip">

            <com.gc.materialdesign.views.ButtonFloat
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"

                android:layout_centerVertical="true" />

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104.0dip"
                android:text="@string/game"
                android:layout_centerVertical="true" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/belajar"
            android:background="#ffffffff"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="64.0dip">

            <com.gc.materialdesign.views.ButtonFloat
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_centerVertical="true" />

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104.0dip"
                android:text="@string/belajar"
                android:layout_centerVertical="true" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/tentangrot"
            android:background="#ffffffff"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="64.0dip">

            <com.gc.materialdesign.views.ButtonFloat
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_centerVertical="true" />

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104.0dip"
                android:text="@string/tentangrot13"
                android:layout_centerVertical="true" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/duel"
            android:background="#ffffffff"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="64.0dip">

            <com.gc.materialdesign.views.ButtonFloat
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_centerVertical="true" />

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104.0dip"
                android:text="@string/duel"
                android:layout_centerVertical="true" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/d1"
            android:background="#ffffffff"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="64.0dip">

            <com.gc.materialdesign.views.ButtonFloat
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_centerVertical="true" />

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104.0dip"
                android:text="@string/d"
                android:layout_centerVertical="true" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/d2"
            android:background="#ffffffff"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="64.0dip">

            <com.gc.materialdesign.views.ButtonFloat
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_centerVertical="true" />

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104.0dip"
                android:text="@string/g"
                android:layout_centerVertical="true" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:id="@+id/d3"
            android:background="#ffffffff"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="64.0dip">

            <com.gc.materialdesign.views.ButtonFloat
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip"
                android:layout_centerVertical="true" />

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104.0dip"
                android:text="@string/s"
                android:layout_centerVertical="true" />
        </com.gc.materialdesign.views.LayoutRipple>

    </LinearLayout>
</com.gc.materialdesign.views.ScrollView>
